# superlists

./: .gitflic-ci.yml  .gitignore  Dockerfile  functional_tests.py  pyproject.toml  requirements.txt
.github/workflows/: check.yml  test.yml
functional_tests/: tests.py
infra/: Dockerfile.ci  debug-ci.py  deploy-playbook.yaml  install_firefox.sh
lists/: tests.py  urls.py  views.py
lists/migrations/: 0002_item_text.py  0003_list.py
lists/templates/lists/: base.html  home.html  list.html
src/accounts/: models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_token.py
src/accounts/tests/: test_authentication.py  test_models.py  test_views.py
src/functional_tests/: base.py  container_commands.py  test_layout_and_styling.py  test_list_item_validation.py  test_login.py  test_my_lists.py  test_simple_list_creation.py  tests.py
src/lists/: forms.py  models.py  urls.py  views.py
src/lists/migrations/: 0001_initial.py  0004_item_list.py  0005_alter_item_unique_together.py  0006_alter_item_options.py  0007_list_owner.py
src/lists/static/: lists.js  package-lock.json  package.json
src/lists/static/tests/: Spec.js  SpecRunner.html  jasmine-browser-runner.config.mjs
src/lists/templates/lists/: base.html  home.html  list.html  my_lists.html
src/lists/templates/lists/includes/: form.html  scripts.html
src/lists/tests/: test_all.py  test_forms.py  test_models.py  test_views.py
src/superlists/: settings.py  urls.py
superlists/: settings.py  urls.py
