[project]
name = "tdd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ansible>=12.1.0",
    "django>=5.2.7",
    "docker>=7.1.0",
    "gunicorn>=23.0.0",
    "lxml[cssselect]>=6.0.2",
    "python-decouple>=3.8",
    "selenium>=4.38.0",
    "whitenoise>=6.11.0",
]
